# cpp-project-template

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  App_8cpp.html  App_8cpp.js  App_8hpp.html  App_8hpp.js  App_8hpp__incl.map  App_8hpp__incl.md5  App_8hpp_source.html  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CTestConfig.cmake  CppCheckSuppressions.txt  LICENSE  LICENSE.html  MainFrame_8cpp.html  MainFrame_8cpp.js  MainFrame_8hpp.html  MainFrame_8hpp.js  MainFrame_8hpp__dep__incl.map  MainFrame_8hpp__dep__incl.md5  MainFrame_8hpp__incl.map  MainFrame_8hpp__incl.md5  MainFrame_8hpp_source.html  README.md  README_8md.html  SanitizerBlacklist.txt  TODO.md  UserOpt_8cpp.html  UserOpt_8cpp.js  UserOpt_8hpp.html  UserOpt_8hpp.js  UserOpt_8hpp__dep__incl.map  UserOpt_8hpp__dep__incl.md5  UserOpt_8hpp__incl.map  UserOpt_8hpp__incl.md5  (+149 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/scripts/: build.cmake  configure.cmake  test.cmake
.github/workflows/: build-debug.yml  build-release.yml  clear_cache.yml  cmake.yml  doxygen-gh-pages.yml
.gitlab/: .gitlab-ci.yml
.gitlab/docker_scripts/build_gcc_deb/: Dockerfile  bootstrap.sh
.gitlab/docker_scripts/debian/: Dockerfile  bootstrap.sh
.gitlab/docker_scripts/doxygen/: Dockerfile  bootstrap.sh
assets/: version.rc.in
assets/linux/: template.desktop.in
assets/nsis/: readme.txt
cmake/: .cpack_ignore  BuildTimeConfigureFile.cmake  CodeCoverage.cmake  FindSphinx.cmake  clang-format.cmake  clang-tidy.cmake  cpack_module.cmake  cppcheck.cmake  doxygen.cmake  memcheck.cmake  sanitizer.cmake  sphinx.cmake  utf8_to_utf8bom.vbs
docs/: GUIDE.md  INSTALL.md  development_guide.md  getting_started.md  install.md
docs/doxygen/: footer.html  header.html
docs/sphinx/: doxygen.rst  index.rst.in
packaging/apple/: icon.icns
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  (+28 more)
src/: CMakeLists.txt  config.h.in
src/common/: tutorial_1.cpp
src/projectcli/: CMakeLists.txt  UserOpt.cpp  UserOpt.hpp  main.cpp
src/projectlib/: CMakeLists.txt  compiler.h  tutorial_1.hpp
src/projectlib/src/: CMakeLists.txt  compiler.h  tutorial_1.cpp  tutorial_1.hpp
src/projectlib/test/: CMakeLists.txt  tutorial_1_gtest.cpp
src/projectwx/: App.cpp  App.hpp  CMakeLists.txt  MainFrame.cpp  MainFrame.hpp  splashscreen.cpp  splashscreen.hpp  utils.cpp  utils.hpp  wx_lsan_suppressions.txt
src/projectwx/src/: App.cpp  App.hpp  CMakeLists.txt  MainFrame.cpp  MainFrame.hpp  splashscreen.cpp  splashscreen.hpp  utils.cpp  utils.hpp
